# DnD-spell-comparison

./: .gitignore  LivingScroll.spec  README.md  SpellGraphix.spec  __main__.py  calculations.py  db.py  dices.py  dndSpellPlot.py  gui.py  main.py  plotting.py  pyproject.toml  requirements.txt  rules.py  spellBook.db  spellList.py
backend/: __init__.py
builder/: build.py
character_sheet/: model.py  spell_profile.py
database/: __init__.py  defaults.py  management.py  schema.py  schema.sql
database/characters/: 59fe63e3-0585-445a-8042-67beadddb3b7.json  _meta.json
docs/: COMPENDIUM_GUIDE.md  PROJECT_STRUCTURE.md  UI_THEME.md
gui/: __init__.py  app.py  application_context.py  resources.py  theme.py
gui/dialogs/: __init__.py  class_entry_dialog.py  equipment_entry_dialog.py  feat_entry_dialog.py  global_settings_dialog.py  spell_source_dialog.py  spellcasting_settings_dialog.py
gui/utils/: compendium_formatting.py  stat_blocks.py
gui/widgets/: __init__.py  class_features_group.py  class_options_group.py  class_progression_table.py  compendium_spells_table.py  equipment_table.py  feats_table.py  feature_timeline_group.py  modifiers_group.py  (+3 more)
magic/: cantrips.py  spells.py
scripts/: build_linux.sh  build_windows.ps1  update_feat_yaml.py  update_spellbook.py
services/: __init__.py  armor_class.py  character_library.py  compendium.py  condition_immunities.py  hit_points.py  logger.py  modifier_sources.py  passive_scores.py  resistances.py  rules_config.py  senses.py  settings.py  species_grants.py  speed.py
spell_graphs/: __init__.py  dices.py  plotting.py
tests/: __init__.py  test_calculations.py  test_character_model.py  test_compendium.py  test_database.py  test_dices.py  test_plotting.py  test_settings.py
(+1915 files in other folders)
