[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spellgraphix"
version = "0.0.0"
description = "Personal D&D 2024 compendium + character + spell math toolkit"
requires-python = ">=3.10"

# Keep dependencies managed primarily via requirements.txt for this personal project.
# This list exists so `pip install -e .` works reliably.
dependencies = [
  "PySide6>=6.10.0",
  "matplotlib>=3.10.0",
  "numpy>=2.0.0",
  "pymupdf>=1.25.0",
  "PyYAML>=6.0",
  "requests",
  "beautifulsoup4",
  "markdownify",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0",
  "pyinstaller-hooks-contrib",
]

[project.scripts]
livingscroll = "main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = [
  "modules",
  "modules.*",
]
